
  [ Darren Salt ]
  * Add support for the 'super hybrid engine', which is accessible in kernel
    2.6.30-rc7 and later, and allow for automatic upclocking when on AC and
    downclocking when on battery (default is fastest/slowest).
  * Add an option for preferring to use the 'Master' control for volume
    control & muting. Off by default; normally takes effect while booting.

  [ Thiemo Nagel ]
  * spelling fix in the default file
  * fix actions/wireless.sh usage message

 -- Darren Salt <linux@youmustbejoking.demon.co.uk>  Thu, 09 Jul 2009 22:56:19 +0100

eeepc-acpi-scripts (1.1.1) unstable; urgency=low

  [ Darren Salt ]
  * Add support for Fn-F7 (on 10xx models). Default is screen blanking.
    Add support for Fn-F3 (touchpad toggle on 10xx models).
    (Closes: #528759)
  * Rearrange hotkey handling a bit (no functional changes), fix comments
    and document keys for which we don't yet have event codes.
  * Configuration settings FnF6, FnF7, FnF8 and FnF9 are renamed to reflect
    function rather than location.
    (We've had one instance of renaming to reflect location on a 1000-series
    without corresponding fixes in the hotkey handler script.)
  * Alter the audio control blacklisting to allow for controls for which
    (for example) muting only should be allowed.
  * Add "Beep" to the audio control blacklist, but only for volume control.
  * Make sure that, if some controls is unmuted due to volume level change,
    all other relevant controls are unmuted.
  * Fix a bashism in debian/rules.

  [ Raphael Geissert ]
  * Allow fine-grained control over the lid-closing action.
  * Make init script depend on $remote_fs, we use /usr
  * Add support for OSD notifications via kdialog (Closes: #519671)
    - Thanks to Gernot Pansy <pansyg@gmx.at> for the patch
  * Bump standards-version, no change needed
  * Simplify rules file
  * Use su instead of sudo to avoid another dependency
  * Add myself to uploaders

  [ Tanguy Ortolo ]