@@ -5,11 +5,13 @@
 detect_rfkill eeepc-wlan
 wlan_control="$RFKILL"
 
-[ -n "$wlan_control" -a -e $wlan_control ] \
+if ! have_dev_rfkill; then
+  [ -n "$wlan_control" -a -e $wlan_control ] \
     || wlan_control=/sys/devices/platform/eeepc/wlan # pre-2.6.28
-[ -e "$wlan_control" ] || wlan_control=/proc/acpi/asus/wlan # pre-2.6.26
+  [ -e "$wlan_control" ] || wlan_control=/proc/acpi/asus/wlan # pre-2.6.26
+fi
 
-STATE="$(cat $wlan_control)"
+STATE="$(get_rfkill "$wlan_control")"
 
 cmd="$1"
 if [ "$cmd" = toggle ]; then
@@ -22,7 +24,7 @@ case "$cmd" in
 	;;
     on|enable|1)
 	if [ "$STATE" = 0 ]; then
-	    echo 1 > $wlan_control
+	    set_rfkill "$wlan_control" 1
             detect_wlan
 	    if [ "$WLAN_MOD" = 'ath_pci' ] || [ "$WLAN_MOD" = 'ath5k' ]; then
 		# Atheros needs some handholding
@@ -41,7 +43,7 @@ case "$cmd" in
 		ifdown --force $WLAN_IF
 		modprobe -r $WLAN_MOD
 	    fi
-	    echo 0 > $wlan_control
+	    set_rfkill "$wlan_control" 0
 	fi
 	;;
     *)
